Fix visuals and overflow

--- a/src/app/renderer/components/app/FileBrowser/components/FileEditor/FileEditorStyles.scss
+++ b/src/app/renderer/components/app/FileBrowser/components/FileEditor/FileEditorStyles.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  height: 96vh;
 
   .entries {
     flex: 1;
@@ -36,6 +37,7 @@
 :local .sidebarForm {
   flex: 1;
   display: flex;
+  overflow-y: auto;
 
   form {
     flex: 1;
