--- a/src/app/renderer/components/app/FileBrowser/components/FileEditor/components/Entry/EntryStyles.scss
+++ b/src/app/renderer/components/app/FileBrowser/components/FileEditor/components/Entry/EntryStyles.scss
@@ -8,6 +8,8 @@
   display: flex;
   flex-direction: column;
   padding-left: .5rem;
+  width: 40px;
+  margin: 0 5px auto auto;
 
   button {
     margin-bottom: .3rem;
